# rocketry-with-fastapi

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: __main__.py  api.py  main.py  scheduler.py
app/api/: main.py  models.py
app/api/routers/: schedule.py
app/scheduler/: main.py
app/scheduler/tasks/: example.py
app/tests/: test_api.py
frontend/: README.md  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js
frontend/src/components/: live.js  task.js  utils.js
