[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "rocketry"
description = "Rocketry example: Rocketry & FastAPI"
readme = "README.md"
license = {file="LICENSE"}
authors = [
    {name = "Mikael Koli", email = "koli.mikael@gmail.com"},
]
requires-python = ">=3.7"

dynamic = ["version"]
dependencies = [
    'rocketry', 
    'fastapi',
    'uvicorn',
    'sqlalchemy'
]

[tool.setuptools_scm]
write_to = "app/_version.py"
local_scheme = "no-local-version"

[project.optional-dependencies]
test = [
    "pytest",
    "requests",
    "pytest-asyncio",
]

docs = [
    "sphinx >= 1.7.5",
    "pydata-sphinx-theme",
    "sphinx_book_theme",
    "sphinx-copybutton",
    "sphinx-material",
]

[tool.coverage.run]
source = ["app"]
branch = false
omit = [
    "test/*",
    "_version.py"
]
data_file = "cov_data/.coverage"

[tool.coverage.report]
omit = [
    "app/test/*",
    "app/_version.py",
    "app/__main__.py"
]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",

    # Don't complain about abstract methods, they aren't run:
    '''@(abc\.)?abstractmethod''',

    # Ignore type checking imports
    "if TYPE_CHECKING",
]
ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"